🍿 fixed some css issues
some text was grey in buttons, search bar text was too dark

--- a/main/twooter-app/src/styles/ProfilePreview.css
+++ b/main/twooter-app/src/styles/ProfilePreview.css
@@ -6,7 +6,7 @@
     flex-direction: row;
     margin-left: 10px;
 }
-.profilePreview__header > p, span {
+.profilePreview__header > .profilePreview__header__p, .personIcon {
     color: var(--grey);
 }
 .profilePreview__header > p {
